Se quitan dependencias innecesarias